Request, Response - Thymeleaf Teamplate

--- a/src/main/resources/templates/admin/places.html
+++ b/src/main/resources/templates/admin/places.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-This is places page.
-</body>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org"> <!--타임리프 템플릿으로 인식하게 됨-->
+    <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
+    </head>
+    <body>
+        <p>This is places page.</p>
+        <ul>
+            <li>placeType: <span th:text="${placeType} ?: _">?</span></li>
+            <li>placeName: <span th:text="${placeName} ?: _">?</span></li>
+            <li>address: <span th:text="${address} ?: _">?</span></li>
+        </ul>
+    </body>
 </html>
+
